step_5/destination-rule-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
  - productpage
  http:
  - match:
    - headers:
        region:
          exact: region1
    route:
    - destination:
        host: productpage
        subset: v1       
  - match:
    - headers:
        region:
          exact: region2
    route:
    - destination:
        host: productpage
        subset: v2       
    fault:
      delay:
        fixedDelay: 7s
        percent: 100
